--- a/main.tex
+++ b/main.tex
@@ -71,6 +71,8 @@
 
 
 \subsection{Experiments Description}
+PROVA
+
 We implemented the proposed compilation scheme and have evaluated it
 by two sets of experiments with different purposes. On the one hand we
 evaluated the scheme in a satisficing planning context in which we focused
