--- a/main.tex
+++ b/main.tex
@@ -18,10 +18,8 @@
 
 % \usepackage{fontspec}
 % \usepackage{unicode-math}
-
-% new command
 % \newcommand{\stripsp}{{\sc strips+}}
-\newcommand{\stripsp}{{strips+}}
+\newcommand{\stripsp}{{\sc STRIPS+}}
 % \newcommand{\pddlthree}{{\sc PDDL3}}
 \newcommand{\pddlthree}{{PDDL3}}
 \newcommand{{\lama}}{{{LAMA}}}
@@ -36,6 +34,30 @@
 \newcommand{{\fdremix}}{{FD-Remix}}
 % \newcommand{{\fifthIPC}}{{{IPC5}}}
 
+\newcommand{\strips}{{\sc strips}}
+\newcommand{\adl}{{\sc adl}}
+\newcommand{\pddlIII}{{\sc{pddl3}}}
+\newcommand{\stripspap}{{\sc strips+ap}}
+\newcommand{\stripspp}{{\sc strips+p}}
+\newcommand{\pddl}{{\sc pddl}}
+% new command
+\newcommand{\hplanp}{{HPlan-P}}
+\newcommand{\mipsxxl}{{MIPS-XXL}}
+\newcommand{\lpg}{{LPG}}
+\newcommand{{\GBLcoles}}{{{GBL15-NB-B15}}}
+% \newcommand{{\fifthIPC}}{{ {IPC5}}}
+% \newcommand{{\fifthIPC}}{{\footnotesize {IPC5}}}
+\newcommand{{\fifthIPC}}{{{IPC5}}}
+\newcommand{\threatA}{T_{\mathcal{A}}(o)}
+\newcommand{\violA}{V_{\mathcal{A}}(o)}
+\newcommand{\threatSB}{T_{\mathcal{SB}}(o)}
+\newcommand{\supportSB}{S_{\mathcal{SB}}(o)}
+\newcommand{\threatAMO}{T_{\mathcal{AO}}(o)}
+\newcommand{\supportST}{S_{\mathcal{ST}}(o)}
+\newcommand{\affected}{\mathcal{I}(o)}
+\newcommand{\truettt}{\small \texttt{TRUE}}
+\newcommand{\pviol}{P\textit{-violated}}
+\newcommand{\affectedd}{P_{\textit{affected}}(o)}
 
 \frenchspacing  %Required
 \setlength{\pdfpagewidth}{8.5in}  %Required
@@ -54,7 +76,26 @@
 }
 \maketitle
 \begin{abstract}
-...
+We address the problem of planning with preferences in propositional 
+domains extended with the class of (preferred) temporally extended goals 
+supported in  {\pddlIII}, that is part of the standard planning language 
+{\pddl} since the 5th International Planning Competition (\fifthIPC). Such 
+preferences are useful to characterise plan quality by allowing the user
+to express certain soft constraints on the state trajectory of the desired
+solution plans.
+Starting from the work of Keyder and Geffner on compiling (reachability)
+soft goals, we propose a compilation scheme
+for translating a {\strips} problem enriched with qualitative  {\pddlIII}
+preferences  (and possibly also with soft goals) into an equivalent {\strips}
+problem with action costs. 
+The proposed compilation, which supports all types of preferences in the benchmarks
+from \fifthIPC, allows many existing {\strips} planners to immediately address
+planning with preferences. 
+An experimental analysis presented in the paper evaluates the performance of
+state-of-the-art {\strips} planners supporting action costs using our compilation
+approach to deal with qualitative  {\pddlIII} preferences.  The results indicate
+that our approach is highly competitive with respect to current planners that
+natively support the considered class of preferences.
 \end{abstract}
 
 \section{Introduction}
@@ -71,7 +112,7 @@
 
 
 \subsection{Experiments Description}
-PROVA
+
 
 We implemented the proposed compilation scheme and have evaluated it
 by two sets of experiments with different purposes. On the one hand we
