--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,21 @@
+@inproceedings{Briel-et-al:AAAI04,
+	Author = {Briel, M. and Sanchez, R. and Do, M. and Kambhampati, S.},
+	Booktitle = {Proceedings of Nineteenth National Conference on Artificial Intelligence ({AAAI}04)},
+	Optpublisher = {AAAI Press},
+	Title = {Effective Approaches for Partial Satisfaction (Over-Subscription) Planning},
+	Year = {2004},
+    pages={562--569}
+    }
+
+
+@inproceedings{do-kambhampati04,
+	Author = {Do, M.B. and Kambhampati, S.},
+	Booktitle = {Proceedings of Fifth International Conference on Knowledge Based Computer Systems {(KBCS04)}},
+	Title = {Partial Satisfaction (Over-Subscription) Planning as Heuristic Search},
+	Year = 2004,
+	pages={mancanti}}
+
+
 @article{GHLS+09,
 	Author = {Gerevini, A. and Haslum, P. and Long, D. and Saetti, A. and Dimopoulos, Y.},
 	Journal = {Artificial Intelligence},
@@ -41,7 +59,7 @@
 
 @inproceedings{MercuryIPC8,
 	Author = {Katz, M. and Hoffmann, J.},
-	Booktitle = {In 8th International Planning Competition Booklet (ICAPS-14)},
+	Booktitle = {In Eighth International Planning Competition Booklet (ICAPS-14)},
 	Title = {Mercury Planner: Pushing the Limits of Partial Delete Relaxation},
 	Year = {2014},
 	pages ={43-47}
@@ -50,7 +68,7 @@
 @inproceedings{nunez2014miplan,
       title={{MIPlan} and {DPMPlan}},
       author={N{\'u}nez, S. and Borrajo, D. and Linares L{\'o}pez, C.},
-      Booktitle = {In 8th International Planning Competition Booklet (ICAPS-14)},
+      Booktitle = {In Eighth International Planning Competition Booklet (ICAPS-14)},
       pages={13--16},
       year={2014}
 }
@@ -58,7 +76,7 @@
 @inproceedings{cenamor2014ibacop,
       title={{IB}A{C}O{P} and {IB}A{C}O{P} planner},
       author={Cenamor, I. and De La Rosa, T. and Fern{\'a}ndez, F.},
-      Booktitle = {In 8th International Planning Competition Booklet (ICAPS-14)},
+      Booktitle = {In Eighth International Planning Competition Booklet (ICAPS-14)},
       pages={35--38},
       year={2014}
 }
@@ -75,7 +93,7 @@
 
 
 @misc{ipc9website,
-  title = {The 2018 international planning competition Classical Tracks},
+  title = {The 2018 international planning competition ({IPC}) Classical Tracks},
   howpublished = {\url{https://ipc2018-classical.bitbucket.io}},
   note = {Accessed: 2018-10-12}
 }
