nuovi histogrammi + commento risultati

--- a/biblio.bib
+++ b/biblio.bib
@@ -35,7 +35,15 @@
 }
 
 
-	
+@inproceedings{coles2011lprpg,
+  title={LPRPG-P: Relaxed Plan Heuristics for Planning with Preferences.},
+  author={Coles, Amanda Jane and Coles, Andrew},
+  booktitle={Proceedings of the Twenty-First International Conference on Automated Planning and Scheduling (ICAPS 2011)},
+  year={2011},
+  pages={26-33}
+}
+
+
 @inproceedings{nebel2018,
 	Author = {Wright B., Mattmüller R. and Nebel B..},
 	Title = {Compiling Away Soft Trajectory Constraints in Planning.},
@@ -59,7 +67,7 @@
 
 @inproceedings{MercuryIPC8,
 	Author = {Katz, M. and Hoffmann, J.},
-	Booktitle = {In Eighth International Planning Competition Booklet (ICAPS-14)},
+	Booktitle = {In Eighth International Planning Competition Booklet (ICAPS 2014)},
 	Title = {Mercury Planner: Pushing the Limits of Partial Delete Relaxation},
 	Year = {2014},
 	pages ={43-47}
@@ -68,7 +76,7 @@
 @inproceedings{nunez2014miplan,
       title={{MIPlan} and {DPMPlan}},
       author={N{\'u}nez, S. and Borrajo, D. and Linares L{\'o}pez, C.},
-      Booktitle = {In Eighth International Planning Competition Booklet (ICAPS-14)},
+      Booktitle = {In Eighth International Planning Competition Booklet (ICAPS 2014)},
       pages={13--16},
       year={2014}
 }
@@ -76,7 +84,7 @@
 @inproceedings{cenamor2014ibacop,
       title={{IB}A{C}O{P} and {IB}A{C}O{P} planner},
       author={Cenamor, I. and De La Rosa, T. and Fern{\'a}ndez, F.},
-      Booktitle = {In Eighth International Planning Competition Booklet (ICAPS-14)},
+      Booktitle = {In Eighth International Planning Competition Booklet (ICAPS 2014)},
       pages={35--38},
       year={2014}
 }
