--- a/main.tex
+++ b/main.tex
@@ -341,6 +341,8 @@ the enhanced version {\lamapruning} is better than everyone else indeed
 it improves the performance of LAMA in all the considered domains except in Rovers where there is no
 soft goal.
 
+In Figure \ref{...} we can see
+
 %%%%%%%%%%%%%%%%
 % COMMENTO TPP %
 %%%%%%%%%%%%%%%%
