--- a/biblio.bib
+++ b/biblio.bib
@@ -70,7 +70,7 @@
 	Booktitle = {In Eighth International Planning Competition Booklet (ICAPS 2014)},
 	Title = {Mercury Planner: Pushing the Limits of Partial Delete Relaxation},
 	Year = {2014},
-	pages ={43-47}
+	pages ={43-47}}
 	
 
 @inproceedings{nunez2014miplan,
@@ -99,9 +99,17 @@
   year={2015}
 }
 
-
 @misc{ipc9website,
   title = {The 2018 international planning competition ({IPC}) Classical Tracks},
   howpublished = {\url{https://ipc2018-classical.bitbucket.io}},
   note = {Accessed: 2018-10-12}
+}
+
+
+@inproceedings{haslum2007domain,
+  title={Domain-independent construction of pattern database heuristics for cost-optimal planning},
+  author={Haslum, P. and Botea, A. and Helmert, M. and Bonet, B. and Koenig, S. and others},
+  year={2007},
+  Booktitle={In Proceedings of the Twenty-second AAAI Conference on Artificial Intelligence (AIII 2007), 
+  pages={1007–1012}
 }
